infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vector-platform-svc
  namespace: devopstrio-system
spec:
  selector:
    app: vector-platform
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8018
  type: ClusterIP
