infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vector-platform-ingress
  namespace: devopstrio-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vector.devopstrio.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vector-platform-svc
            port:
              number: 80
